# factorio-blueprint

./: Cargo.toml
src/: lib.rs
