[package]
name = "factorio-blueprint"
version = "0.1.0"
authors = ["Jezza <jezzadabomb@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
flate2 = "1.0.12"

serde_json = "1.0.41"
#serde_json = {path = "../json"}
serde_repr = "0.1.5"

thiserror = "1.0.1"

[dependencies.serde]
#path = "../serde/serde"
version = "1.0.101"
features = ["derive"]